made date pull up number pad instead of keyboard on mobile, fixed side to side scroll with css

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #ffffff
+  background-color: #ffffff;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 code {
